@@ -8,6 +8,7 @@ shadow-4.1.1 -> shadow-4.1.2						UNRELEASED
   * Fix the detection of the audit, pam, and selinux library and header
     file; and fail if the feature is requested but not present on the
     system.
+  * Fix build failure when configured with audit support.
 
 shadow-4.1.0 -> shadow-4.1.1						02-04-2008
 
